# test1

./: git_github.txt
HAKATON/: kivano.csv  main3.py  modul.py
HTML CSS/: index.html  index2.html  style.css  style2.css
OOP/: OOP.py  encapsulation.py  inheritance.py  mixins.py
basics/: 12.py  123.py  chek.txt  comprehensions.py  data_types.py  dict_ty.py  linux_commands.txt  lists_type.py  logical_exp.py  loops.py  razbor.py  set_type.py  str  str_type.py  try_except._.py  задания класс руум
file_/: data.csv  files.py  json_.py  test.json  test1.txt
functions/: 123.py  build-in-functions.py  decorators.py  functions.py  scopes.py
parsing/: db.csv  db.json  main.py  py33  pyproject.toml  telephon.csv
pip_venv/: pip_venv.txt  pyproject.toml
py_tests/: pyproject.toml
py_tests/src/: main.py
py_tests/tests/: test_func.py
telebot_/: main.py  pyproject.toml  requirements.txt
