[tool.poetry]
name = "pip_venv"
version = "0.1.0"
description = ""
authors = ["marlen"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "8.0.0"
exceptiongroup = "1.2.0"
iniconfig = "2.0.0"
packaging = "23.2"
pluggy = "1.4.0"
tomli = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

