[tool.poetry]
name = "telebot_"
version = "0.1.0"
description = ""
authors = ["marlen"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.16.1"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
